# vision-lab

./: .gitignore  .gitpod.yml  .lightning  .lightningignore  .pre-commit-config.yaml  .vercelignore  404.html  CITATION.cff  MANIFEST.ini  README.md  app.py  autogen.py  cloud_run.sh  do_cloud_run.sh  do_local_run.sh  helpers.sh  helpers.txt  index.html  mkdocs.yml  mps.sh  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml
apps/: fast_tuned_trainer.py  optimize.py  optimized_trainer.py  sweep.py  sweep_app.py  trainer.py  trainer_app.py  tuned_trainer.py
apps/dash/: pages.py  utilities.py
assets/: styles.css
checkpoints/production/: README.md
checkpoints/trials/: README.md
dash/: app.py  pages.py  utilities.py
dash/history/: app.py  components.py  utilities.py
dash/model/: app.py  components.py  utilities.py
dash/training/: app.py  components.py  utilities.py
dash/training/assets/: styles.css
dash_prototype/: __init__.py  app.py  pages.py  utilities.py
data/predictions/: predictions.pt
data/training_split/: README.md
docs/: .authors.yml  .meta.yml  docusaurus.config.js  index.md  package-lock.json  package.json
docs-src/: docusaurus.config.js  package-lock.json  package.json
docs-src/blog/: InstallingNVMonMacOS.mdx  LearningResources.mdx  MLExperimentManagement.mdx
docs-src/docs/: data.mdx  intro.md
docs-src/docs-src/docs/visionpod/: core.PodModule.md
docs-src/docs/Source Reference/: app.AutoScaledFastAPI.md  core.LabModule.md  core.LabTrainer.md
docs-src/docs/VisionPod Source/: app.AutoScaledFastAPI.md  core.PodModule.md  core.PodTrainer.md
docs-src/docs/visionpod/: app.AutoScaledFastAPI.md  core.PodModule.md
docs-src/src/pages/: index.tsx
docs/blog/: authors.yml  first-post.mdx
docs/docs/: intro.md
docs/reference/: core.md  datamodule.md  module.md  pipeline.md
docs/src/pages/: index.tsx
docs/visionpod/: package.json
docs/visionpod/src/pages/: index.tsx
lightning-app/: README.MD  app.py
lightning_pod/cli/: pod.py  utils.py
lightning_pod/cli/init/core/: module.py
lightning_pod/cli/init/pipeline/: preprocess.py
lightning_pod/components/sweeps/: __init__.py  wandb.py  wandb_optuna.py
lightning_pod/pages/: dash_ui.py
lightning_pod/pipeline/: datamodule.py  dataset.py  preprocess.py
lightning_podex/cli/: pod.py  utils.py
lightning_podex/cli/init/pipeline/: datamodule.py  dataset.py
lightning_podex/components/sweeps/: __init__.py  wandb_optuna.py
lightning_podex/core/: module.py  trainer.py
lightning_podex/pages/: dash_ui.py
lightning_podex/pipeline/: datamodule.py
logs/csv/: README.md
logs/csv/tensorboard/version_0/: events.out.tfevents.1704910421.ip-10-192-11-242.13667.0
logs/csv/tensorboard/version_1/: events.out.tfevents.1704910634.ip-10-192-11-242.17811.0  hparams.yaml
logs/tuned_configs/: README.md
logs/wandb/: README.md
logs/wandb_logs/: README.md
lpx-ui/: package.json  turbo.json
models/checkpoints/: README.md  model.ckpt
models/onnx/: README.md  model.onnx
next-app/: README.md
notebooks/: transforms-demo.ipynb
pipeline/: README.md
pod-app/: package.json
pod-src/logs/torch_profiler/: fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1677672358387.pt.trace.json  fit-profiler.txt
pod-src/visionpod/cli/: console.py
pod-src/visionpod/core/: trainer.py
pod-src/visionpod/pipeline/: datamodule.py
pod_docs/src/pages/: index.tsx
pod_ui/: README.md  next.config.js  package.json
pod_ui/src/pages/: _app.tsx  index.tsx
pod_ui/src/styles/: globals.css
react-ui/: package.json
react-ui/public/: index.html
react-ui/src/: index.tsx
react-ui/src/hooks/: useLightningState.ts
react-ui/src/pages/: _app.tsx
reference/core/: index.html
reference/datamodule/: index.html
reference/module/: index.html
reference/pipeline/: index.html
requirements/: base.txt  docs.txt  experiment_managers.txt  extras.txt  frontends.txt
research-demo/: app.py  pages.py  utilities.py
research/data/predictions/: README.md
research/demo/: pages.py  utilities.py
research/logs/optuna/: README.md
research/logs/tensorboard/: README.md
research/notebooks/: transforms-demo.ipynb
search/: search_index.json
src/visionlab/: __init__.py  cli.py  config.py  datamodule.py  module.py
src/visionlab/app/: app.py  components.py  streamlit.py  utilities.py
src/visionlab/cli/: lab.py  utils.py
src/visionlab/components/: __init__.py
src/visionlab/core/: __init__.py  module.py  trainer.py
src/visionlab/pipeline/: __init__.py  datamodule.py  dataset.py
src/visionpod/: config.py
src/visionpod/cli/: console.py  utils.py
src/visionpod/core/: trainer.py
src/visionpod/pipeline/: dataset.py
streamlit/: app.py
tests/: test_datamodule.py  test_module.py  test_network_module.py
ui/: README.md
vision_pod/: conf.py
vision_pod/cli/: console.py  pod.py  utils.py
vision_pod/components/hpo/: sweep.py
vision_pod/components/sweeps/: __init__.py  wandb_optuna.py
vision_pod/core/: trainer.py
vision_pod/pipeline/: datamodule.py
visionpod/: __init__.py  conf.py  config.py
visionpod-ui-proto/: app.py  pages.py  utilities.py
visionpod-ui/src/pages/: _app.tsx
visionpod/app/: app.py
visionpod/cli/: console.py  pod.py  utils.py
visionpod/components/: __init__.py
visionpod/components/hpo/: __init__.py  flow.py  sweep.py  work.py  workers.py
visionpod/components/sweep/: work.py
visionpod/components/train/: __init__.py  flow.py  work.py  workers.py
visionpod/core/: __init__.py  module.py  trainer.py
visionpod/fabric/docs/: autogen.py
visionpod/pipeline/: __init__.py  datamodule.py
(+37 files in other folders)
