# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
line-length = 120

[tool.isort]
known_first_party = [
    "lightning_pod",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.mypy]
files = ["lightning_pod"]
install_types = true
non_interactive = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition = true
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

# do not add type hints to lightnig_pod/cli/seed/ or core.module
# because lightning already defines types
[[tool.mypy.overrides]]
module = [
    "lightning_pod.core.module",
    "lightning_pod.cli.seed.core.module",
    "lightning_pod.cli.seed.core.trainer",
    "lightning_pod.cli.seed.pipeline.datamodule",
    "lightning_pod.cli.seed.pipeline.dataset",
]
ignore_errors = true
