# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[options]
zip_safe = False
packages = find:
install_requires =
    lightning
    lightning_training_studio @ git+https://github.com/Lightning-AI/lightning-hpo.git
    torchmetrics
    torch
    torchvision
    optuna
    wandb
    aim
    torch-tb-profiler
    click
    hydra-core
    rich
    rich-cli
    plotly
    dash
    dash-bootstrap-components
    gunicorn
    pynecone

[options.extras_require]
dev =
    black
    flake8
    pytest
    mypy
    bandit
    coverage
    pre-commit
    isort
lightning-all =
    lightning-flash
    lightning-bolts
text = torchtext
audio = torchaudio
all =
    lightning-pod[lightning-all, text, audio]
dev-all =
    lightning-pod[dev, all]

[options.entry_points]
console_scripts =
    pod = lightning_pod.cli.pod:main

[flake8]
max-line-length = 120

[tool:pytest]
testpaths =
    tests
norecursedirs =
    .git
    .github
    *.egg-info
addopts =
    --disable-pytest-warnings
filterwarnings =
    #  IGNORE THIRD PARTY LIBRARY WARNINGS
    # ignore tensorboard proto warnings
    ignore: Call to deprecated*
    # ignore torchvision transform warning
    ignore: .* and will be removed in Pillow 10"
    # ignore torch distributed warning
    ignore: torch.distributed*.
    # ignore PL UserWarning
    ignore: You are trying to `self.log()`*

[coverage:run]
disable_warnings = ["couldnt-parse"]

[coverage:report]
ignore_errors = true
exclude_lines = ["pragma: no cover"]
